# TasteBud

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  base_config.py  config.py  docker-compose.yml  pyproject.toml  pyrefly.toml  requirements.txt  ruff.toml
.github/workflows/: docker-arm.yml
libs/graph/graph_builders/: grape_graph_builder.py  graph_builder_pipeline.py
libs/graph/graph_entity_collectors/: entity_relationship_source_protocol.py  graph_entity_collector.py  graph_schema_builder.py  lastfm_entity_source.py  tastedive_entity_source.py
libs/spotify/: spotify_history_builder.py
libs/spotify/data_model/: playlist.py
libs/spotify/data_processing/: streaming_history_to_dataframe_conversion.py
libs/spotify/playlist_management/: playlist_manager.py
libs/spotify/spotify_client/: spotify_client.py
libs/tastedive/: tastedive_client.py
scripts/: build_graph_from_spotify_history.py  combine_spotify_playlists.py  convert_json_history_to_parquet.py  enhance_spotify_data.py  examine_parquet_as_dataframe.py  generate_openapi.py
services/playlist_manager/: requirements.txt
services/playlist_manager/nicegui_ui/: main.py  main_page.py
services/playlist_manager/server/: app.py  data_model.py  exception_handlers.py  openapi.json
src/libs/geolocation/: config.py  geolocation_providers.py  geolocator.py
src/libs/graph/: graph_dataclass.py
src/libs/lastfm/: config.py  lastfm_client.py
src/libs/podiuminfo/: data_model.py
src/libs/spotify/: config.py
src/libs/tastedive/: config.py  tastedive_client.py
src/services/event_scanner/: config.py
src/services/playlist_manager/: requirements.txt
tastebud/: .env.example  config.py  main.py  polars_df_wrapper.py
tastebud/data_analysis/: spotify_data_analyzer.py
tastebud/data_processing/: streaming_history_to_parquet_conversion.py  streaming_history_to_parquet_converter.py
tastebud/graph/: grape_graph_constructor.py  graph_constructor_protocol.py  tastedive_graph_data_extractor.py
tastebud/graph/graph_builders/: grape_graph_builder.py  graph_builder_pipeline.py  graph_builder_protocol.py
tastebud/graph/graph_entity_collectors/: base_graph_entity_collector.py  graph_entity_collector.py  (+5 more)
tastebud/lastfm/: lastfm_client.py
tastebud/spotify/: spotify_history_builder.py  spotify_history_dataframe.py  spotify_history_fetcher.py
tastebud/spotify_client/: .cache
tastebud/spotify_export_processing/: streaming_history_to_parquet_converter.py
tastebud/tastedive/: tastedive_client.py
tastebud/util/: data_util.py  file_util.py  query_util.py
(+60 files in other folders)
