[project]
name = "tastebud"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "nicegui>=3.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-json-logger>=4.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "spotipy>=2.25.1",
    "beautifulsoup4>=4.14.2",
    "ruff>=0.14.9",
    "pyrefly>=0.45.2",
    "geopy>=2.4.1",
]

[dependency-groups]
dev = [
    "grape>=0.2.5",
    "graphviz>=0.21",
    "pylast>=6.0.0",
    "polars>=1.32.3",
    "pyarrow>=22.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
